tests/neg/i8736.check
-- [E007] Type Mismatch Error: tests/neg/i8736.scala:29:29 -------------------------------------------------------------
29 |  def res1: String  = rec.get("k") // error: type mismatch
   |                      ^^^^^^^^^^^^
   |                      Found:    Any
   |                      Required: String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/i8736.scala:30:29 -------------------------------------------------------------
30 |  def res2: Int     = rec.get("v") // error: type mismatch
   |                      ^^^^^^^^^^^^
   |                      Found:    Any
   |                      Required: Int
   |
   | longer explanation available when compiling with `-explain`
-- [E051] Reference Error: tests/neg/i8736.scala:31:26 -----------------------------------------------------------------
31 |  def res3: Boolean = rec.get("z") // error: ambiguous
   |                      ^^^^^^^
   |                Ambiguous overload. The overloaded alternatives of method (k: ("k" : String)): String with types
   |                 (k: ("k" : String)): String
   |                 (k: ("v" : String)): Int
   |                 (k: ("z" : String)): Boolean
   |                all match arguments (("z" : String))
   |
   |                Note: Overloaded definitions introduced by refinements cannot be resolved
   |
   | longer explanation available when compiling with `-explain`
